Refactor shelf and device assignment logic, update config for shelf/slot rules, shelf assignment logic and add overflow configuration
- Refactored logic in `app_helpers.py` to clarify and unify device-to-shelf assignment across auto and override modes.
- Improved extraction of slot and UCD info from task description.
- Enhanced error handling and overflow slot handling.
- Changed how shelves and slots are resolved, now using config-driven `overflow_rules` for device overflow handling.
- Updated `config.yaml`:
  - Refined `shelf_objects` definitions.
  - Added/updated `key_words` and `shelf_assignment` for improved keyword-based shelf assignment.
  - Introduced explicit `overflow_rules` for configurable slot overflow routing.
- Minor adjustments and improvements to error messages and slot handling in assignment logic.
- Touch other supporting files to support refactor and new configuration.

This change prepares the codebase for clearer, more maintainable device assignment and eases further shelf/slot configuration in the future.

More details:

- Combine slot_new_device and assign_task_slot into unified assign_device_to_shelf function
  * Supports both auto-assign and override modes with automatic detection
  * Centralizes device slotting logic in app_helpers.py
  * Maintains backward compatibility with existing wrapper functions

- Add configurable overflow shelf routing in config.yaml
  * New overflow_rules section allows device-specific overflow shelf assignment
  * Supports different overflow shelves and slots based on device keywords
  * Falls back to shelf.slot_start if explicit slot not configured

- Update techstop_notify_automation.py and techstop_shelf_assignment.py
  * Both now use the unified assign_device_to_shelf function
  * Wrapper functions maintain original return formats for compatibility

- Fix Mac device handling in home.html
  * Handle slot -1 case (devices that don't require slotting)
  * Show appropriate success message without attempting to 

--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ shelf_objects:
   repair_shelf: [10, 62, "Computer", 1]
   desktop_shelf: [1, 72, "Computer", 1]
   phone_shelf: [22, 100, "Phone", 2]
-  mac_shelf: [0, 0, "Mac", 0]
+  mac_shelf: [0, 0, "Mac", 0] # Mac shelf is used for only emailing the user, it is not used for slotting, that is why it is set to 0
 
 # task key works, should be lowercase
 key_words: ["techstop asset pickup", "ready for pickup", "techstop computer pickup"]
@@ -18,7 +18,7 @@ key_words: ["techstop asset pickup", "ready for pickup", "techstop computer pick
 # for every shelf object, there is a shelf_assignment if we want to notify/slot to it directly
 # shelf_name = [[key_words], shelf_name]
 # key_words is key_words found in the device asset or sys_class_name
-# we add the key_words from the above config ^ key_words =... incase there is CI on the task
+# we add the key_words from the above config ^ key_words =... incase there is no CI on the task
 # this way if we find those keywords we know what shelf we can slot the device in
 shelf_assignment:
   elite_book:
@@ -39,3 +39,28 @@ shelf_assignment:
   smart_phone:
     - ["smartphone", "iphone", "ready for pickup"]
     - "phone_shelf"
+
+# Overflow handling (order matters; first match wins)
+# Each rule:
+#   keywords: list of substrings to match against asset/sys_class_name
+#   shelf: name from shelf_objects/shelf_assignment
+#   slot: explicit slot number to use for overflow (fallback to shelf.slot_start if omitted)
+overflow_rules:
+  - keywords: shelf_assignment["elite_book"][0]
+    shelf: "desktop_shelf"
+    slot: 72
+  - keywords: shelf_assignment["z_book"][0]
+    shelf: "desktop_shelf"
+    slot: 72
+  - keywords: shelf_assignment["tough_book"][0]
+    shelf: "desktop_shelf"
+    slot: 72
+  - keywords: shelf_assignment["smart_phone"][0]
+    shelf: "desktop_shelf"
+    slot: 72
+  - keywords: shelf_assignment["mac"][0]
+    shelf: "desktop_shelf"
+    slot: 72
+  - keywords: shelf_assignment["desktop"][0]
+    shelf: "desktop_shelf"
+    slot: 72
